<resources>
    <!-- Activity Names -->
    <string name="app_name">ParkCompanion</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Buttons -->
    <string name="login_button">Login</string>
    <string name="settings_button">Settings</string>
    <string name="create_user_button">Create User</string>
    <string name="logout_button">Logout</string>

    <string name="parks_button">Parks</string>
    <string name="park_edit_button">Park Edit</string>
    <string name="park_details_button">Park Details</string>

    <string name="tasks_button">Tasks</string>
    <string name="task_edit_button">Edit</string>
    <string name="task_details_button">Details</string>
    <string name="task_create_button">New</string>
    <string name="task_delete_button">Delete</string>

    <string name="contacts_button">Contacts</string>
    <string name="contact_edit_button">Edit</string>
    <string name="contact_details_button">Details</string>
    <string name="contact_create_button">New</string>

    <string name="save_changes_button">Save</string>
    <string name="refresh_button">Refresh</string>

    <!-- Settings titles -->
    <string name="server_address">Server Address</string>

    <string name="task_database_name">tasks</string>
    <string name="contact_database_name">contacts</string>

    <string name="task_name_title">Name:</string>
    <string name="task_park_title">Park:</string>
    <string name="task_description_title">Description:</string>

    <!--This will be removed for the final build-->
    <string name="default_username">jeff</string>
    <string name="default_password">123</string>

    <!--Defaults-->
    <string name="default_protocol">http://</string>
    <string name="default_address">http://192.168.1.17</string>
    <string name="default_server_file">/php/ParkCompanion/index.php</string>

    <string name="contact_details_name_title">Name:</string>
    <string name="contact_details_phone_title">Phone:</string>
    <string name="contact_details_park_title">Park:</string>
    <string name="contact_details_position_title">Position:</string>
    <string name="contact_delete_button">Delete</string>

</resources>
